app/globals.css
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

/* body {
  font-family: "Lay Grotesk - Trial";
  cursor: none;
} */

@layer base {
  .mini-heading {
    @apply text-[13px] font-medium font-ibm uppercase;
  }

  .big-para {
    @apply text-[60px] font-medium leading-[110%] -1024:text-[40px] -600:text-[28px];
  }
}

.custom-scroll::-webkit-scrollbar {
  height: 3px;
  width: 4px;
}
.custom-scroll::-webkit-scrollbar-thumb {
  background: white;
  border-radius: 10px;
}

/* Track */
.custom-scroll::-webkit-scrollbar-track {
  background: #0f0f0f;
}

.nav-link-container.passed-hero li {
  opacity: 0.5;
}

.nav-link:hover .nav-arrow {
  transform: translateX(0) scale(0.75);
  opacity: 1;
}

.nav-arrow.active {
  transform: translateX(0) scale(0.75);
  opacity: 1;
}

.nav-link:hover {
  opacity: 1 !important;
}

.nav-link.active {
  opacity: 1 !important;
}

.line-anim {
  position: relative;
  width: fit-content;
}

.line-anim::before {
  content: "";
  position: absolute;
  height: 1px;
  transform: scaleX(0);
  width: 100%;
  bottom: 0;
  background-color: white;
  transition: transform 0.5s cubic-bezier(0.76, -0.03, 0.36, 1.03);
  transition-delay: var(--delay, 0s);
  transform-origin: right;
}

.nav.line-anim::before {
  background-color: black !important;
  mix-blend-mode: difference;
}

.line-anim:hover::before {
  transform-origin: left;
  transform: scaleX(1);
}

.line-anim.arrow-line::before {
  transform: scaleX(1);
  transform-origin: left;
}

.line-anim.arrow-line:hover::before {
  transform-origin: right;
  transform: scaleX(0);
}

.address-cont:hover .line-anim::before {
  transform-origin: left;
  transform: scaleX(1);
}

.invert {
  mix-blend-mode: difference;
}

.works-screen {
  transform-style: preserve-3d;
}

.works-screens-container {
  perspective: 1000px;
  transform-style: preserve-3d;
}

.line {
  /* overflow: hidden;
  display: inline-block !important; */
}

.heading-anim {
  /* overflow: hidden; */
  /* padding-bottom: 3px; */
}

.word,
.heading-anim,
.para-anim {
  will-change: transform;
}

.will-anim {
  will-change: transform;
}

.word {
  /* overflow: hidden; */
}

.heading-anim{
  overflow: hidden;
}

.nav-reachout::before {
  position: absolute;
  content: "";
  bottom: -3px;
  width: 100%;
  height: 1px;
  background-color: white;
}

/* @media (max-width: 768px) {
  .pin-spacer {
    margin-top: 64px !important;
  }
} */

